# project-falcon

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  pyproject.toml
app/: __init__.py
app/analytics/: result.py
app/backtest/: __init__.py  backtest_session.bkp.py  backtest_session.py  csv_provider.py  historical_provider.py  replay_clock.py  replay_engine.py  replay_event.py
app/broker/: __init__.py  broker_client.py  exceptions.py  factory-bkp.py  factory.py  paper_broker.py  zerodha_broker.bkp.py  zerodha_broker.bkp2.py  zerodha_broker.bkp3.py
app/config/: __init__.py  loader.py  manager.py  settings.py
configs/: backtest.yaml  live.yaml  paper.yaml
database/: schema.sql
docs/: ADR.md  Architecture.md  CodingStandards.md  Falcon_Engineering_Handbook.md  Installation.md
scripts/: setup.ps1  test_application.py  test_backtest.py  test_backtest_session.bkp.py  test_backtest_session.py  test_broker_factory.py  test_candle.py  test_config.py  test_csv_provider.py  test_database.py  test_ema.py  test_ema_crossover.py  test_execution.py  test_health.py  test_indicator.py  test_instrument.py  test_kite_sdk.py  test_logger.py  test_market_data_service.py  test_market_domain.py  test_market_provider.py  test_moving_average.py  test_normalizer.py  test_option_type.py  test_paper_broker.py  test_portfolio.py  test_position.bkp.py  test_position.py  test_replay_clock.py  test_replay_engine.bkp23.py  test_replay_engine.py  test_risk_manager.py  test_signal.py  test_sma.py  test_strategy.py  test_strategy_context.py  test_strategy_engine.py  test_timeframe.py  test_trade_lifecycle.py  test_trade_request.py  (+5 more)
(+40 files in other folders)
