[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-falcon"
version = "0.1.0a0"
description = "Automated options trading platform for Indian markets."
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = { file = "LICENSE" }

authors = [
    { name = "Project Falcon Team" }
]

keywords = [
    "algorithmic-trading",
    "options",
    "zerodha",
    "nifty",
    "sensex",
    "python"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Financial and Insurance Industry",
]

dependencies = [
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0",
    "pydantic>=2.11",
    "loguru>=0.7",
    "rich>=14.0"
]

[project.optional-dependencies]

dev = [
    "pytest>=8.4",
    "black>=25.0",
    "ruff>=0.12",
    "mypy>=1.17"
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]